optimisation sur les images, et améloiration responsive

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://tomtardivon.github.io/porfolio-build-tom-tardivon/",
+  "homepage": ".",
   "name": "tom_tardivon_portfolio",
   "version": "0.1.0",
   "private": true,
